swagger configs of users service is complete
