# GATEWAY/app/app.go
@@ -4,6 +4,8 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/ruziba3vich/smart-house/app/handler"
 	"github.com/ruziba3vich/smart-house/internal/config"
+	"github.com/ruziba3vich/smart-house/internal/utils"
+	middleware "github.com/ruziba3vich/smart-house/midd-ware"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -20,15 +22,16 @@ func New(rbmqHandler *handler.RbmqHandler) *APP {
 	}
 }
 
-func (a *APP) RUN(cfg *config.Config) error {
+func (a *APP) RUN(cfg *config.Config, t *utils.TokenGenerator) error {
 	router := gin.Default()
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	router.POST("/users/register", a.rbmqHandler.RegisterUser)
-	router.PUT("/users/:id", a.rbmqHandler.UpdateUser)
-	router.DELETE("/users/delete/:id", a.rbmqHandler.DeleteUserById)
-	// router.GET("/users/", a.rb.GetAllUsers)
+	router.POST("/users/login", a.rbmqHandler.LoginUser)
+	router.PUT("/users/:id", middleware.AuthMiddleware(t), a.rbmqHandler.UpdateUser)
+	router.DELETE("/users/delete/:id", middleware.AuthMiddleware(t), a.rbmqHandler.DeleteUserById)
+	router.GET("/users/", middleware.AuthMiddleware(t), a.rbmqHandler.GetAllUsers)
 
 	return router.Run(cfg.Port)
 }
